2012-01-04  Andrew Pinski  <apinski@cavium.com>

	* doc/invoke.texi (-march=@var{arch}): Add octeon+ and octeon2.

2012-01-04  Andrew Pinski  <apinski@cavium.com>
	    Adam Nemet  <anemet@caviumnetworks.com>

	* config/mips/mips.md (size): Add SI and DI.
	(SIZE): New mode attribute.
	(U): New code attribute.
	* config/mips/mips-dsp.md (mips_lbux): Use gen_mips_lbux_extsi.
	(mips_lbux_<mode>): Delete.
	(mips_l<SHORT:size><u>x_ext<GPR:mode>_<P:mode>): New pattern.
	(mips_lhx): Use gen_mips_lhx_extsi.
	(mips_lhx_<mode>): Delete.
	(mips_lwx): Delete.
	(mips_l<size>x): New expand.
	(mips_lwx_<mode>): Delete.
	(mips_l<GPR:size>x_<P:mode>): New pattern.
	(*mips_lw<u>x_<P:mode>_ext): Likewise.
	* config/mips/mips-ftypes.def: Add DI f(POINTER, SI) function type.
	* config/mips/mips.c (mips_lx_address_p): New function.
	(mips_rtx_costs <case MEM>): Call mips_lx_address_p.
	(dsp64): New availability predicate.
	(mips_builtins): Add an entry for __builtin_mips_ldx.
	* config/mips/mips.h (ISA_HAS_LBX): New define.
	(ISA_HAS_LBUX): Likewise.
	(ISA_HAS_LHX): Likewise.
	(ISA_HAS_LHUX): Likewise.
	(ISA_HAS_LWX): Likewise.
	(ISA_HAS_LWUX): Likewise.
	(ISA_HAS_LDX): Likewise.
	* doc/extend.texi (__builtin_mips_ldx): Document.

2012-01-04  Tristan Gingold  <gingold@adacore.com>

	* config/vms/xm-vms.h (HOST_LONG_FORMAT, HOST_PTR_PRINTF): Define
	when long pointers are used.
	* config.build (*-*-*vms*): Handle all OpenVMS targets.
	(alpha64-dec-*vms*, alpha*-dec-*vms*)
	(ia64-hp-*vms*): Remove.
	* config/vms/xm-vms64.h: Delete.

2012-01-04  Aldy Hernandez  <aldyh@redhat.com>

	* opts.c (finish_options): Remove duplicate sorry.

2012-01-04  Aldy Hernandez  <aldyh@redhat.com>

	PR middle-end/51696
	* trans-mem.c (diagnose_tm_1): Display indirect calls with no name
	correctly.

2012-01-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/51750
	* tree.c (size_low_cst): New function.
	* tree.h (size_low_cst): Declare.
	* fold-const.c (fold_comparison): Use it to extract the low